Fix screen size and extra padding

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ a {
   display: flex;
   flex-direction: column;
   padding-top: 4.5rem;
-  padding-bottom: 8.5rem;
+  padding-bottom: 6rem;
 }
 
 .header {
